--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fake News Detector | Beta</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">    
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navbar">
@@ -32,7 +32,7 @@
     </section>
     <section class="section-2"></section>
     <footer></footer>
-    <script src="../js/particles.js-master/particles.js"></script>
-    <script src="../js/particles.js-master/demo/js/app.js"></script>
+    <script src="/particles.js-master/particles.js"></script>
+    <script src="/particles.js-master/demo/js/app.js"></script>
 </body>
 </html>
