particlejs cdn usage

--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
     <section class="section-1">
         <div id="particles-js">
             <main>
-                <input class="news-input" placeholder="Enter news headline" type="text">
-                <button class="news-submit">Submit</button>
+                <form class="news-submit-form" action="">
+                    <input class="news-input" placeholder="Enter news headline" type="text">
+                    <button type="submit" class="news-submit">Submit</button>
+                </form>
             </main>
         </div>
     </section>
     <section class="section-2"></section>
     <footer></footer>
-    <script src="/particles.js-master/particles.js"></script>
-    <script src="/particles.js-master/demo/js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
