--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="particles-js">
             <main>
                 <form class="news-submit-form" action="">
-                    <input class="news-input" placeholder="Enter news headline" type="text">
+                    <textarea class="news-input" placeholder="Enter news headline"></textarea>
                     <button type="submit" class="news-submit">Submit</button>
                 </form>
             </main>
