--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <h1>FakeN <span>Beta</span></h1>
         </div>
         <div class="navbar-links">
-            <a href="/home">Home</a>
-            <a href="/api">Api</a>
+            <a href="/index.html">Home</a>
+            <a href="/api.html">Api</a>
             <a href="/about">About</a>
         </div>
         
@@ -26,7 +26,7 @@
         <div id="particles-js">
             <main>
                 <form class="news-submit-form" onsubmit="sendNews(event)">
-                    <input class="news-input" placeholder="Enter news headline" oninput="handleValueChange(event)"></input>
+                    <textarea class="news-input" placeholder="Enter news headline" oninput="handleValueChange(event)"></textarea>
                     <button type="submit" class="news-submit">Submit</button>
                 </form>
             </main>
