--- a/dashboard.html
+++ b/dashboard.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fake News Detector | Beta</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="dashboard.css">
+    <title>Dashboard | Fake News Detector | Beta</title>
 </head>
 <body>
     <nav class="navbar">
@@ -19,21 +19,13 @@
             <a href="/index.html">Home</a>
             <a href="/FakeNewsDetectorClient/dashboard.html">Dashboard</a>
         </div>
-        
     </nav>
-    <section class="section-1">
-        <div id="particles-js">
-            <main>
-                <form class="news-submit-form" onsubmit="sendNews(event)">
-                    <textarea class="news-input" placeholder="Enter news headline" oninput="handleValueChange(event)"></textarea>
-                    <button type="submit" class="news-submit">Submit</button>
-                </form>
-            </main>
+    <div class="dashboard">
+        <div class="news-container">
+
         </div>
-    </section>
-    <footer>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <script src="main.js"></script>
+    </div>
+    
+    <script src="dashboard.js"></script>
 </body>
 </html>
