home page url redirection fix

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>FakeN <span>Beta</span></h1>
         </div>
         <div class="navbar-links">
-            <a href="/index.html">Home</a>
+            <a href="/FakeNewsDetectorClient/index.html">Home</a>
             <a href="/FakeNewsDetectorClient/dashboard.html">Dashboard</a>
         </div>
         
